--- a/app/src/homecon-pages-menu-page.html
+++ b/app/src/homecon-pages-menu-page.html
@@ -53,6 +53,8 @@
             }
         </style>
         
+        <homecon-web-socket-sender id="websocket"></homecon-web-socket-sender>
+
         <a class="item horizontal layout center" href="/pages/[[path]]">
             <img class="icon" src="/images/icon/ffffff/[[parseIcon(config.icon)]].png">
             <h1 class="title">{{config.title}}</h1>
@@ -92,12 +94,11 @@
                 this.$.editDialog.open();
             },
             save: function(){
-                this.set('config.title',this.newTitle);
-                this.set('config.icon',this.newIcon);
                 this.$.editDialog.close();
+                this.$.websocket.send({'event':'pages_page','path':this.path,'value':{'title':this.newTitle,'icon':this.newIcon}})
             },
             delete: function(){
-                this.fire('delete')
+                this.$.websocket.send({'event':'pages_page','path':this.path,'value':null})
             },
             parseIcon: function(icon){
                 if(icon==''){
