--- a/app/src/homecon-pages-section.html
+++ b/app/src/homecon-pages-section.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <link rel="import" href="homecon-section.html">
 <link rel="import" href="homecon-pages-widget.html">
@@ -7,9 +8,16 @@
 
 <dom-module is="homecon-pages-section">
     <template>
-        <style>
+        <style include="iron-flex iron-flex-alignment">
             .hidden{
                 display: none !important;
+            }
+            .fullwidth{
+                width: 100%;
+            }
+            .halfwidth{
+                width: 50%;
+                min-width: 190px;
             }
             .edit{
                 position: absolute;
@@ -85,7 +93,6 @@
                 this.$.editDialog.open();
             },
             addWidgetDialog: function(){
-                this.widgetType = 'button'
                 this.$.addWidgetDialog.open();
             },
             save: function(e){
