--- a/app/src/view-settings.html
+++ b/app/src/view-settings.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="homecon-web-socket-object.html">
 <link rel="import" href="homecon-web-socket-sender.html">
 <link rel="import" href="homecon-edit-dialog.html">
-<link rel="import" href="homecon-states.html">
+<link rel="import" href="homecon-components.html">
 
 <dom-module id="view-settings">
 
@@ -109,8 +109,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </homecon-edit-dialog>
 
             <paper-material>
-                <h1>States</h1>
-                <homecon-states states="{{states}}"></homecon-states>
+                <h1>Components</h1>
+                <homecon-components states="{{states}}" components="{{components}}"></homecon-components>
             </paper-material>
 
         </homecon-page>
