--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -31,6 +31,7 @@
             :host{
                 display: block;
                 --toolbar-background-color: #000000;
+                --dialog-background-color: #060606;
                 --primary-background-color: #080808;
                 --secondary-background-color: #0b0b0b;
 
