--- a/app/src/homecon-edit-dialog.html
+++ b/app/src/homecon-edit-dialog.html
@@ -14,6 +14,9 @@
         <style include="iron-flex iron-flex-alignment">
             :host{
             }
+            paper-dialog {
+                background-color: var(--dialog-background-color);
+            }
         </style>
         
         <paper-dialog id="dialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation" dynamic-align>
