--- a/app/src/view-editor.html
+++ b/app/src/view-editor.html
@@ -37,6 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <homecon-section type="raised">
                 <paper-toggle-button active={{edit}}>Edit</paper-toggle-button>
             </homecon-section>
+
         </homecon-page>
 
     </template>
@@ -48,7 +49,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 edit: {
                     type: 'Boolean',
                     value: false,
-                    notify: true
+                    notify: true,
                 },
             },
         });
