--- a/app/src/view-editor.html
+++ b/app/src/view-editor.html
@@ -22,6 +22,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="homecon-page-header.html">
 <link rel="import" href="homecon-section.html">
 
+<link rel="import" href="widgets/homecon-widget-weather-forecast-block.html">
+
 <dom-module id="view-editor">
 
     <template>
@@ -33,11 +35,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </style>
 
         <homecon-page>
+
             <homecon-page-header title="Editor" icon="pagebuilder_pagebuilder"></homecon-page-header>
             <homecon-section type="raised">
                 <paper-toggle-button active={{edit}}>Edit</paper-toggle-button>
             </homecon-section>
-
+            
         </homecon-page>
 
     </template>
